@@ -70,8 +70,8 @@ public:
 				}
 				
 				info.error = build_message(ngettext(
-						"<b>Subtitle has a too long line:</b> 1 character",
-						"<b>Subtitle has a too long line:</b> %i characters", number), number);
+						"Subtitle has a too long line: <b>1 character</b>",
+						"Subtitle has a too long line: <b>%i characters</b>", number), number);
 				info.solution = _("<b>Automatic correction:</b> unavailable, correct the error manually.");
 				
 				return true;
